# python-server-deployment-tests

./: .gitignore  .pre-commit-config.yaml  TODO.md  pyproject.toml
src/core/: asgi.py  settings.py  urls.py  wsgi.py
